[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://Sprites/dirtCard.png" type="Texture" id=2]
[ext_resource path="res://Sprites/GrassCard.png" type="Texture" id=3]
[ext_resource path="res://Sprites/mineCard.png" type="Texture" id=4]
[ext_resource path="res://Sprites/lumberCard.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "dirt",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "grass",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "lumber",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "mine",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="CardSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "mine"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
